@@ -90,6 +90,7 @@ static void compatInit(Compatibility_t &c)
     c.demos_counter_enable = false;
     c.luna_allow_level_codes = false;
     c.luna_enable_engine = Compatibility_t::LUNA_ENGINE_UNSPECIFIED;
+    c.fix_fairy_stuck_in_pipe = true;
 
 
     if(s_compatLevel >= COMPAT_SMBX2) // Make sure that bugs were same as on SMBX2 Beta 4 on this moment
@@ -123,6 +124,7 @@ static void compatInit(Compatibility_t &c)
         c.pause_on_disconnect = false;
         c.allow_drop_add = false;
         c.multiplayer_pause_controls = false;
+        c.fix_fairy_stuck_in_pipe = false;
     }
 
     if(s_compatLevel >= COMPAT_SMBX13) // Strict vanilla SMBX
@@ -247,6 +249,7 @@ static void loadCompatIni(Compatibility_t &c, const std::string &fileName)
         compat.read("pause-on-disconnect", c.pause_on_disconnect, c.pause_on_disconnect);
         compat.read("allow-drop-add", c.allow_drop_add, c.allow_drop_add);
         compat.read("multiplayer-pause-controls", c.multiplayer_pause_controls, c.multiplayer_pause_controls);
+        compat.read("fix-fairy-stuck-in-pipe", c.fix_fairy_stuck_in_pipe, c.fix_fairy_stuck_in_pipe);
     }
     // 1.3.4
     compat.read("fix-player-filter-bounce", c.fix_player_filter_bounce, c.fix_player_filter_bounce);
