@@ -16,6 +16,7 @@ Changelog for 1.3.6 [WIP]
 -Reduced game object memory footprint (@ds-sloth)
 -Performance improvements when run on slow filesystems (@ds-sloth)
 -Fixed unexpected music got started after the level got entered too quick from the world map (@Wohlstand)
+-Fixed the vanilla bug: a Player can stuck in the pipe when enters it being a fairy
 
 Changes for 1.3.5.3-1
 -Fixed autostart events behaviour
